--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@ header {
     border-bottom: solid #ddd;
     align-items: end;
     background-color: #e0c3f1;
+    font-family: 'Roboto';
 }
 
 header img {
@@ -52,6 +53,7 @@ header span {
 
 .navigation {
     display: none;
+    font-family: 'Roboto';
 }
 
 .navigation.open {
@@ -177,6 +179,7 @@ footer {
     text-align: center;
     background-color: #8b8bca;
     margin-top: 20px;
+    font-family: 'Roboto';
     
 }
 
