--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 body {
     background-image: url("../images/bear-lake.webp");
     background-repeat: no-repeat;
@@ -86,10 +90,46 @@ main {
     margin: 0 auto;
 }
 
+#cta {
+
+    display: block;
+    background-color: #082852;
+    color: white;
+    font-family: "Macondo";
+    font-size: 1.2em;
+    padding: 20px;
+    border-radius: 10px;
+    margin: 20px auto;
+    text-decoration: none;
+    width: 120px;
+    text-align: center;
+}
+
+#cta:hover {
+
+    background-color:#8bc1ca;
+    color: black;
+
+}
+
+
+
 h2 {
 
     color:#ffffff;
     font-family: "Gravitas One";
+    text-align: center;
+    margin-top: 30px;
+}
+
+.normhead::first-line {
+    border-radius: 5px;
+    background-color: #082852;
+}
+
+.normhead::first-letter {
+    font-size: 2em;
+    background-color: #082852;
 }
 
 .hero-img {
@@ -112,13 +152,24 @@ h2 {
     text-align: left;
     padding: 10px 15px 10px 5px;
     font-family: "Gravitas One";
+    margin-top: 0;
 
 }
 
 #current img {
-    width: 44px;
-    display: inline;
-    margin: 10px;
+    width: 55px;
+    display: inline;   
+}
+
+.stuff .card p {
+    font-family: 'Macondo';
+    padding: 5px;
+    font-size: 1.2em;
+}
+
+.stuff .card {
+
+    text-align: center;
 }
 
 .menu {
@@ -144,7 +195,12 @@ h2 {
     font-family: "Macondo";
 }
 
-.grid {
+#company-spotlight {
+
+    margin: 40px 0;
+}
+
+.grid, #company-spotlight {
 
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(1fr 1fr));
@@ -191,6 +247,10 @@ h2 {
     font-family: "Macondo";
     justify-self: center;
 
+}
+
+.b-card h3 {
+   font-size: 1.5em;
 }
 
 .b-card img {
@@ -266,11 +326,22 @@ footer img {
 
     .card {
         display: inline-block;
+        height: 100%;
     }
 
     .stuff {
-        display: flex;
-        justify-content: space-around;
+        margin-top: 40px;
+        width: 80%;
+        justify-self: center;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+        grid-gap: 10px;
+    }
+
+    #events {
+
+        grid-column: 1/3;
     }
 
     footer {
@@ -288,6 +359,12 @@ footer img {
     .grid {
 
         grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    }
+
+    #company-spotlight {
+
+        grid-template-columns: 1fr 1fr;
+        margin: 50px 0 100px 0;
     }
 
 
