change my css????

--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -8,6 +8,8 @@ html, body {
     overflow-x: hidden;
 }
 
+/* hello?? */
+
 body {
     background-image: url("../images/bear-lake.webp");
     background-repeat: no-repeat;
