--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -205,7 +205,7 @@ h2 {
 .grid, #company-spotlight {
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(1fr 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(1fr, 1fr));
     grid-gap: 10px;
     align-items: center;
     justify-items: center;
