--- a/styles/style.css
+++ b/styles/style.css
@@ -174,6 +174,38 @@ h2 {
     border: #2b0e2b solid 5px;
 }
 
+dialog {
+
+    border: 5px solid black;
+    border-radius: 10px;
+    padding: 1rem;
+    background-color: #fff;
+    color:#2b0e2b;
+    font-family: "Roboto";
+    width: 90%;
+    max-width: 600px;
+    box-shadow: 0 0 3rem #2b0e2b;
+    margin: auto auto;
+}
+
+dialog p, h2, h3 {
+
+    margin-bottom: 5px;
+}
+
+::backdrop {
+    background-color: rgb(43, 14, 43 / 50%);
+}
+
+dialog button {
+
+    position: absolute;
+    top: 23px;
+    right: 23px;
+    padding: .5rem 1rem;
+    border: 1px solid black;
+}
+
 footer {
     
     text-align: center;
