--- a/styles/prophets.css
+++ b/styles/prophets.css
@@ -21,7 +21,7 @@ body {
 #cards {
     display: grid;
     grid-gap: 0.5rem;
-    grid-template-columns: repeat(auto-fit, minmax(440px, 1fr))
+    grid-template-columns: repeat(auto-fit, minmax(440px, 1fr));
 }
 
 .card {
