--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -9,6 +9,7 @@
     padding: 0;
     margin: 0;
     overflow-x: hidden;
+    box-sizing: border-box;
 }
 
 header {
@@ -105,7 +106,7 @@ nav a.chosen {
 }
 
 body {
-    background-image: url("../images/Commission/Candy_sketch.png");
+    background-image: url("../images/milky-way.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -113,7 +114,7 @@ body {
 main {
     width: 95vw;
     margin: 0 auto;
-    background-color: #e4c1f9;
+    background-color: rgb(228, 193, 249, .5);
     text-align: center;
     font-family: "Macondo";
     margin-top: 50px;
@@ -123,7 +124,7 @@ main {
 main h1{
     font-family: "Mogra";
     padding: 10px;
-    color:var(--my-dark-blue);
+    color: #fff;
 }
 
 .interest {
@@ -151,6 +152,116 @@ main h1{
     padding: 10px;
     margin: 5px;
     background-color: #A9DEF9;
+}
+
+form {
+    text-align: left;
+}
+
+form label {
+    display: block;
+    padding: .25rem;
+    font-family: "Macondo";
+    color: black
+}
+
+fieldset {
+    background-color: var(--my-blue);
+    margin: 20px auto;
+    border:#082852 5px solid;
+    box-shadow: 0 0 3rem #082852;
+    max-width: 600px;
+}
+
+form input[type="text"], input[type="email"], input[type="tel"], textarea {
+
+    padding: 12px;
+    border-radius: 10px;
+    width: 100%;
+    text-align: left;
+}
+
+form input:required, textarea {
+
+    border-left: var(--my-pink) 5px solid;
+}
+
+form legend {
+
+    background-color: var(--my-blue);
+    font-family: "Macondo";
+    font-weight: bold;
+    font-size: 1.5em;
+    padding: 0px 10px;
+    color: var(--my-dark-blue);
+    border-radius: 10px;
+}
+
+form h2 {
+
+    margin-left: 7px;
+    color: var(--my-dark-blue);
+    margin-top: 10px;
+
+}
+
+form input[type="radio"] {
+
+    margin-right: 5px;
+}
+
+form button {
+    display: block;
+    margin: 0 auto;
+    padding: 20px;
+    font-family: "Macondo";
+    font-size: 1.2em;
+    border:#082852 5px solid;
+    box-shadow: 0 0 3rem #082852;
+    border-radius: 10px;
+    cursor: pointer;
+
+}
+
+#form-deets {
+
+    display: block;
+    margin: 100px auto;
+    width: 350px;
+    text-align: center;
+    background-color: var(--my-blue);
+    padding: 20px;
+    border:#082852 solid 5px;
+    font-family: "Macondo";
+    border-radius: 5px;
+    font-size: 1.2em;
+}
+
+#form-deets p {
+
+    padding: 10px;
+}
+
+#cta {
+
+    display: block;
+    background-color: var(--my-blue);
+    color: black;
+    font-family: "Macondo";
+    font-size: 1.2em;
+    padding: 20px;
+    border-radius: 10px;
+    margin: 20px auto;
+    text-decoration: none;
+    width: 120px;
+    text-align: center;
+}
+
+#cta:hover {
+
+    background-color: var(--my-dark-blue);
+    color: white;
+
 }
 
 footer {
@@ -224,6 +335,14 @@ footer img {
     .main-grid {
         display: grid;
         grid-template-columns: 1fr 2fr;
+    }
+
+    #order-page {
+
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        align-items: center;
+        justify-content: center;
     }
 
     footer {
