--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -119,6 +119,7 @@ main {
     font-family: "Macondo";
     margin-top: 50px;
     border: 5px solid #A9DEF9;
+    border-radius: 20px;
 }
 
 main h1{
@@ -131,7 +132,7 @@ main h1{
     display: inline;
 }
 
-#tos-button, #prices-button {
+#tos-button, #prices-button, .more {
     display: inline;
     border: none;
     padding: 20px;
@@ -139,6 +140,10 @@ main h1{
     font-size: 1.5em;
     cursor: pointer;
     background-color: #e4c1f9;
+}
+
+.more.hidden {
+    display: none;
 }
 
 #photos h2 {
@@ -210,6 +215,40 @@ form input[type="radio"] {
     margin-right: 5px;
 }
 
+dialog {
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgb(0 0 0 / 50%);
+  border: 3px solid #fff;
+    background-color: var(--my-blue);
+  margin: auto auto;
+  max-width: 300px;
+  color: black;
+}
+
+dialog h2 {
+
+    background-color: #082852;
+    color: #fff;
+    padding: 10px;
+
+}
+
+::backdrop {
+  background-color: rgb(0 0 0 / 50%);
+}
+
+dialog button {
+
+    position: absolute;
+    background: none;
+    border: none;
+    top: 10px;
+    right: 20px;
+    font-size: 1.5em;
+    color: #fff;
+}
+
+
 form button {
     display: block;
     margin: 0 auto;
@@ -262,6 +301,57 @@ form button {
     background-color: var(--my-dark-blue);
     color: white;
 
+}
+
+.opener {
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+    background-color: rgb(246, 148, 193, .50);
+    padding: 40px;
+    justify-items: center;
+    align-items: center;
+
+}
+
+.hero {
+    width: 100%;
+    margin: 20px;
+}
+
+.about-me-page {
+
+    padding-top: 50px;
+}
+
+.card {
+
+    display: grid;
+    grid-template-rows: 1fr auto;
+    align-items: center;
+    font-family: "Macondo";
+    background-color: #082852;
+    color: #fff;
+    border: 5px solid var(--my-pink);
+    border-radius: 10px;
+    width: 50%;
+    margin: 40px auto;
+    gap: 5px;
+    padding: 20px;
+}
+
+.card img {
+
+    border-radius: 10px;
+    justify-self: center;
+
+}
+
+.card p {
+    max-width: 400px;
+    text-align: center;
+    justify-self: center;
 }
 
 footer {
@@ -337,12 +427,18 @@ footer img {
         grid-template-columns: 1fr 2fr;
     }
 
+    .card {
+
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
     #order-page {
 
         display: grid;
         grid-template-columns: 2fr 1fr;
         align-items: center;
-        justify-content: center;
+
     }
 
     footer {
