--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -27,6 +27,7 @@ header {
 header h1 {
     font-family: "Mogra";
     font-size: 3em;
+    overflow-y: hidden;
 }
 
 header img {
@@ -286,6 +287,7 @@ form button {
     font-family: "Macondo";
     border-radius: 5px;
     font-size: 1.2em;
+    color: black;
 }
 
 #form-deets p {
