--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -22,11 +22,12 @@ header {
     width: 100vw;
     align-items: center;
     justify-items: center;
+    height: fit-content;
 }
 
 header h1 {
     font-family: "Mogra";
-    font-size: 3em;
+    font-size: 2.2em;
     overflow-y: hidden;
 }
 
@@ -59,6 +60,7 @@ header img {
 #tos li, #prices li, #prices h3 {
     margin-bottom: 8px;
     font-size: 1.2em;
+    overflow: hidden;
 }
 
 .navigation.open, #tos.open, #prices.open {
@@ -244,6 +246,8 @@ dialog h2 {
     background-color: #082852;
     color: #fff;
     padding: 10px;
+    width: 100%;
+    margin-bottom: 10px;
 
 }
 
@@ -260,6 +264,10 @@ dialog button {
     right: 20px;
     font-size: 1.5em;
     color: #fff;
+}
+
+dialog p, dialog li {
+    padding: 5px;
 }
 
 
